--- a/templates/default/sv-god-run.erb
+++ b/templates/default/sv-god-run.erb
@@ -3,4 +3,4 @@ exec 2>&1
 
 trap 'killall god' 1 2 13 15
 
-/usr/bin/god -D -c /etc/god/master.god --no-syslog & wait
+<%= node[:rbenv][:root] %>/shims/god -D -c /etc/god/master.god --no-syslog & wait
